# ccs-DEN22

./: CMakeLists.txt  LICENSE  Makefile  README.md  run.sh
src/: frn.h
src/frn/: check.cc  check.h  corr.cc  corr.h  exp_check.cc  exp_input.cc  exp_mult.cc  input.cc  input.h  input_corr.cc  input_corr.h  mult.cc  mult.h  network.h  shr.cc  shr.h  tcp_network.h  util.h
src/frn/lib/: logging.h  tools.cc  tools.h
src/frn/lib/logging/: logger.h  nowhere.h  stdout.h
src/frn/lib/math/: arithmetic.cc  arithmetic.h  fp.h  mat.h  p.h  ring.h  vec.h
src/frn/lib/net/: builder.cc  builder.h  channel.cc  channel.h  connector.cc  connector.h  network.h  shared_deque.h  sysi.cc  sysi.h
src/frn/lib/primitives/: hash.h  prg.cc  prg.h
src/frn/lib/secret_sharing/: additive.h  rep.h
test/: mock_network.cc  mock_network.h  tcp_network_helper.h  test_check.cc  test_corr.cc  test_input.cc  test_mult.cc  test_shr.cc  test_tcp_network.cc
